# grants-surveyor

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: GrantsSurveyor_Concepto_y_Requisitos_v3.docx  GrantsSurveyor_Guia_de_Uso.docx  Vision_Plataforma_Investigacion.docx
grants-surveyor-v2/: .env.example
grants_surveyor/agent/: evaluator.py
grants_surveyor/agent/prompts/: evaluate.j2  refine.j2  source_discovery.j2
grants_surveyor/engine/: rule_engine.py
grants_surveyor/graph/: store.py
grants_surveyor/models/: __init__.py  base.py  evidence.py  graph.py  odm.py  projects.py  rules.py
grants_surveyor/odm/: client.py  webhook_receiver.py
grants_surveyor/pipeline/: runner.py
