[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grants-surveyor"
version = "2.0.0"
description = "Banco de trabajo de investigación sobre datos públicos — cliente de OpenDataManager"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }

dependencies = [
    # Core
    "pydantic>=2.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Persistence
    "sqlite-vec>=0.1",
    "aiosqlite>=0.20",
    # AI
    "anthropic>=0.28",
    # Webhook receiver
    "fastapi>=0.111",
    "uvicorn>=0.30",
    # Workbench
    "jupyter>=1.0",
    "ipywidgets>=8.1",
    "gradio>=4.36",
    "pandas>=2.2",
    # Metrics
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",   # para tests del webhook
]

[project.scripts]
grants-surveyor = "grants_surveyor.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
